Fix ul/li spacing, add correct references

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -49,7 +49,7 @@ body {
   margin-top: 20px;
 }
 
-section,
+.home section,
 header {
   @include make-row();
   margin-bottom: 50px;
@@ -88,7 +88,8 @@ hr {
 }
 
 ul, ol {
-  padding-left: 19px;
+  margin-left: 1em;
+  padding: 0;
 }
 
 // Header
@@ -224,8 +225,8 @@ header>div {
   line-height: normal;
   font-size: 2rem;
   list-style: none;
-  padding-left: 0px;
   stroke: $theme-second-color;
+  margin-left: 0;
 
   svg {
     margin-right: 0.2em;
